# Friday

./: .gitignore  INSTALL_RUST.md  README.md  SETUP.md  TROUBLESHOOTING.md  UPGRADE_NODE.md  competitors.md  index.html  package-lock.json  package.json  start-dev.ps1  vite.config.ts
001docs/: feature_list.md  prd.md  technical_design.md
001docs/learning/: 001_tauri_introduction.md  002_pdf_reader_implementation.md
docs/: DeepSeek_OCR_Integration_Analysis.md  FastAPI_Decoupling_Architecture.md  PDF_READER_STATUS.md
python/: conda_setup.bat  conda_setup.sh  condaenv.ehdky_iq.requirements.txt  environment.yml  main.py  requirements.txt
python/friday_core/: __init__.py  agent.py  config.py  database.py  logger.py  router.py
python/friday_listener/: __init__.py  main.py
python/friday_reader/: __init__.py  main.py
python/friday_watcher/: __init__.py  main.py
python/plugins/: __init__.py  example_plugin.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  python_bridge.rs
src/components/: Layout.tsx
src/pages/: Command.tsx  Library.tsx  Listener.tsx  Reader.tsx  Settings.tsx  Watcher.tsx
